--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,17 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>microservices-demo</name>
 	<description>Microservice demo project for Spring Boot</description>
+	<modules>
+		<module>twitter-to-kafka-service</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.0</spring-boot.version>
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+		<lombok.version>1.18.24</lombok.version>
+		<twitter4j.version>4.0.7</twitter4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -28,12 +33,23 @@
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot.version}</version>
 			</dependency>
-
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot.version}</version>
 				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.twitter4j</groupId>
+				<artifactId>twitter4j-stream</artifactId>
+				<version>${twitter4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
