add kafka module and docker-compose files

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 	<modules>
 		<module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
-    </modules>
+		<module>kafka</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<properties>
