--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 		<lombok.version>1.18.24</lombok.version>
 		<twitter4j.version>4.0.7</twitter4j.version>
+		<avro.version>1.11.0</avro.version>
 	</properties>
 
 	<dependencyManagement>
@@ -59,6 +60,11 @@
 				<groupId>org.twitter4j</groupId>
 				<artifactId>twitter4j-stream</artifactId>
 				<version>${twitter4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro</artifactId>
+				<version>${avro.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
