add basic for kafka-admin-client

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
 		<module>kafka</module>
+		<module>common-config</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -27,6 +28,8 @@
 		<lombok.version>1.18.24</lombok.version>
 		<twitter4j.version>4.0.7</twitter4j.version>
 		<avro.version>1.11.0</avro.version>
+		<spring-kafka.version>2.9.0</spring-kafka.version>
+		<spring-retry.version>2.0.0</spring-retry.version>
 	</properties>
 
 	<dependencyManagement>
@@ -35,6 +38,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${spring-kafka.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.retry</groupId>
+				<artifactId>spring-retry</artifactId>
+				<version>${spring-retry.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -47,7 +60,17 @@
 			<dependency>
 				<groupId>com.microservices.demo</groupId>
 				<artifactId>app-config-data</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>common-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>kafka-admin</artifactId>
+				<version>${project.version}</version>
 			</dependency>
 
 			<dependency>
