add service for kafka producer

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.microservices.demo</groupId>
+				<artifactId>kafka-producer</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
 				<artifactId>kafka-admin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
