--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <module>app-config-data</module>
 		<module>kafka</module>
 		<module>common-config</module>
-	</modules>
+        <module>config-server</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -31,6 +32,8 @@
 		<spring-kafka.version>2.9.0</spring-kafka.version>
 		<spring-retry.version>2.0.0</spring-retry.version>
 		<kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
+		<spring-cloud.version>2.2.6.RELEASE</spring-cloud.version>
+		<spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
 	</properties>
 
 	<repositories>
@@ -67,6 +70,18 @@
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot.version}</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud-dependencies.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-config-server</artifactId>
+				<version>${spring-cloud.version}</version>
 			</dependency>
 
 			<!--	LOCAL		-->
