--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>common-config</module>
         <module>config-server</module>
         <module>kafka-to-elastic-service</module>
+        <module>elastic</module>
     </modules>
 	<packaging>pom</packaging>
 
